<resources>
    <string name="app_name">AIMA</string>
    <string name="main_page_selected">%s page is selected</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello NEWS fragment</string>
    <string name="post_something">Post Something</string>
    <string name="membership">Membership</string>
    <string name="post_button">post button</string>
    <string name="member_button">member button</string>
    <string name="donation">Donation</string>
    <string name="donation_button">donation button</string>
    <string name="float_button">float button</string>
    <string name="create_a_story">Create a Story</string>
    <string name="aima_discover">AIMA Social</string>
    <string name="imagelogo">imageLogo</string>
    <string name="profile_name">Profile Name</string>
    <string name="stories">stories</string>
    <string name="join_membership">Join Membership</string>
    <string name="member_panel">Member Panel</string>
    <string name="sample_caption">sample caption</string>
    <string name="email">Email</string>
    <string name="enter_secret_code">Enter-Secret-Code</string>
    <string name="password">Password</string>
    <string name="basic_details">Basic Details</string>
    <string name="about">About</string>
    <string name="social_media">Social Media</string>
    <string name="fb_profile_link">Fb Profile Link</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_bio">Edit Bio</string>
    <string name="loading_please_wait">loading_please_wait</string>
    <string name="loading">loading</string>
    <string name="public_profile">Public Profile</string>
    <string name="no_followers_yet">No followers!</string>
    <string name="read_more">...Read more</string>
    <string name="title_activity_comment">CommentActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="tab_layout">tab_layout</string>
    <string name="cardBackText">This is a digital ID Card of All India Minority Association. The owner of this card is an authorized member of AIMA.</string>
    <string name="no_posts_yet">no posts!</string>

    <string name="facebook_app_id">669209981393103</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="help">Help</string>
    <string name="rules_star">1. 1 Min = 1 Star
1. 1 Hour = ₹12.00
2. 60 min minimum required for earning stars
3. Must be a member for withdraw
</string>
    <string name="search_history">search_history</string>
    <string name="linkopener">linkOpener</string>
    <string name="share">Share</string>
    <string name="other_info">Other Info</string>
    <string name="step1">You can fill this form only one time. No corrections or modification can not be done (If any issue arise then go to menu and contact to \'Help Center\')\nN.B- For filling this form click one below button!</string>
    <string name="posts_follower_followings">Posts, followers and followings</string>
</resources>