<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundColour"
    android:orientation="vertical"
    tools:context=".Activities.EditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/dashboardImage"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_190mdp"
                android:contentDescription="@string/imagelogo"
                android:scaleType="centerCrop"
                android:src="@drawable/profileback"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/myProfile"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/imagelogo"
                android:src="@drawable/profileplaceholder"
                app:civ_border_color="@color/backgroundBottomColour"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/dashboardImage"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dashboardImage" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/camera_24"
                app:layout_constraintBottom_toBottomOf="@+id/myProfile"
                app:layout_constraintEnd_toEndOf="@+id/myProfile"
                app:layout_constraintStart_toStartOf="@+id/myProfile"
                app:layout_constraintTop_toTopOf="@+id/myProfile"
                app:tint="@color/backgroundColour" />

            <ImageView
                android:id="@+id/coverUpload"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="20dp"
                android:src="@drawable/camera_24"
                app:layout_constraintBottom_toBottomOf="@+id/dashboardImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:tint="@color/black" />
            <TextView
                android:id="@+id/editDashboard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10mdp"
                android:layout_marginTop="@dimen/_10mdp"
                android:drawableLeft="@drawable/back_24"
                android:drawablePadding="@dimen/_5mdp"
                app:drawableTint="@color/backgroundBottomColour"
                android:fontFamily="@font/signika_negative_bold"
                android:text="Edit Profile"
                android:textColor="@color/backgroundBottomColour"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/background_text_donation"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/basic_details"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15mdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dashName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20mdp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/profile_24"
                    android:drawablePadding="@dimen/_5mdp"
                    android:text="@string/profile_name"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/_10mdp"
                    android:src="@drawable/edit_24"
                    app:tint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editBio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15mdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bioName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20mdp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/text_fields_24"
                    android:drawablePadding="@dimen/_5mdp"
                    android:text="@string/edit_bio"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/_10mdp"
                    android:src="@drawable/edit_24"
                    app:tint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15mdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/dashAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20mdp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/text_fields_24"
                    android:drawablePadding="@dimen/_5mdp"
                    android:text="@string/about"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/_10mdp"
                    android:src="@drawable/edit_24"
                    app:tint="@color/black" />
            </LinearLayout>





            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/background_text_donation"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/social_media"
                android:textColor="@color/black" />

            <LinearLayout
                android:id="@+id/editFb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15mdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/fbLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20mdp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/insert_link_24"
                    android:drawablePadding="@dimen/_5mdp"
                    android:text="@string/fb_profile_link"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/_10mdp"
                    android:src="@drawable/edit_24"
                    app:tint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editWhatsapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15mdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/whatsappLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20mdp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/call_24"
                    android:drawablePadding="@dimen/_5mdp"
                    android:text="@string/whatsapp_number"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/_10mdp"
                    android:src="@drawable/edit_24"
                    app:tint="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15mdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phoneNoText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_20mdp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/call_24"
                    android:drawablePadding="@dimen/_5mdp"
                    android:text="@string/phone_number"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="@dimen/_10mdp"
                    android:src="@drawable/edit_24"
                    app:tint="@color/black" />
            </LinearLayout>

            <Button
                android:id="@+id/saveProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15mdp"
                android:layout_gravity="center"
                android:text="Save"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>